--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <title>App quiz</title>
+    <title></title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
@@ -19,14 +19,14 @@
         <div class="logo">
             <img src="img/logo.png" alt="" width="15%" class="setlogo">
         </div>
-       
+        <div class="title_onmenu">SMART APP NODE-G02</div>
         <div class="login"><a href="#" class="setLogin">Login</a> </div>
     </div>
     <!-- =============================================================================== -->
     <!-- CONTIANER BODY -->
 
     <div class="contianerApp">
-        <h1 class="titleh1">Welcome to smart quiz app</h1>
+        
         <div class="card">
             <div class="card-item">
                 <img src="img/quizicon.png" alt="" class="icon-img">
