--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
     <!-- =============================================================================== -->
     <!-- CONTIANER BODY -->
 
-    <div class="contianerApp">
+    <div class="contianerApp" style="display: none;">
         
         <div class="card">
             <div class="card-item">
