--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Login and Registration Form in HTML</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <title>Login</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -11,11 +11,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 <body>
+    <!-- header menu -->
+    <div class="menus" style="display: none;">
+        <div class="logos d-flex justify-content-between align-items-center p-2">
+            <img src="img/logo.png" width="5%">
+            <h2>SMART APP NODE-G02</h2>
+            <div class="log"><button class="setLogin">Logout</button></div>
+        </div>
+    </div>
+    <!---------------------------form login and signin-------------------------->
     <div class="containers">
-        <div class="wrapper">
+        <div class="wrapper" >
             <div class="title-text">
-                <div class="title login">Login Form</div>
-                <div class="title signup">Signup Form</div>
+                <div class="title login">Login</div>
+                <div class="title signup">Signup</div>
             </div>
             <div class="form-container">
                 <div class="slide-controls">
@@ -27,55 +36,69 @@
                 </div>
                 <div class="form-inner">
                     <form action="#" class="login">
+                        <div class="form-group correct" style="display:none;">
+                            <div class="alert alert-success d-flex justify-content-center" role="alert">
+                                login successfully!
+                            </div>
+                        </div>
+                        <div class="form-group incorrect" style="display:none;">
+                            <div class="alert alert-danger d-flex justify-content-center" role="alert">
+                                invalid email and password!
+                            </div>
+                        </div>
                         <div class="field">
                             <input type="email" id="loginemail" placeholder="Email Address" required>
                         </div>
+                        <!-- hige and show password -->
                         <div class="field">
-                            <input type="text" id="loginpasword" placeholder="Password" required>
+                            <div class="input-field d-flex">
+                                <input class="pswrd" type="password" id="loginpasword" placeholder="password" required>
+                                <div class="show d-flex justify-content-end align-items-center">
+                                    <li class="fa fa-eye mr-2"></li>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary mt-4" value="login" id="btnsubmit">Submit</button>
+                            <button type="submit" class="btn btn-primary mt-4" value="login" id="btnlogin">Submit</button>
                         </div>
                     </form>
-                    <form action="#" class="signup">
-                        <div class="field">
-                            <input type="text" placeholder="First Name" id="firstname" required>
+                    <form class="signup">
+                        <div class="form-group Correct" style="display:none;">
+                            <div class="alert alert-success d-flex justify-content-center" role="alert">
+                                create successfully!
+                            </div>
                         </div>
                         <div class="field">
-                            <input type="text" placeholder="Last Name" id="lastname" required>
+                            <input type="text" id="firstname" placeholder="First Name" required>
                         </div>
                         <div class="field">
-                            <input type="email" placeholder="Email Address" id="email" required>
+                            <input type="text" id="lastname" placeholder="Last Name" required>
                         </div>
                         <div class="field">
-                            <input type="password" placeholder="Password" id="password" required>
+                            <input type="email" id="email" placeholder="Email Address" required>
+                        </div>
+                        <div class="field">
+                            <div class="input-field d-flex">
+                                <input class="pswrd" type="password" id="password" placeholder="password" required>
+                                <div class="show d-flex justify-content-end align-items-center">
+                                    <li class="fa fa-eye mr-2"></li>
+                                </div>
+                            </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary mt-3" value="Submit" id="submit">Submit</button>
+                            <button type="submit" class="btn btn-primary mt-3" value="Submit" id="btnsignin">Submit</button>
                         </div>
                     </form>   
                 </div>
             </div>
         </div>
     </div>
-<!-- =============================================================================== -->
-    <!-- header menu -->
-    <div class="menu" style="display: none;">
-        <div class="logo">
-            <img src="img/logo.png" alt="" width="12%" class="setlogo">
-        </div>
-        <div class="title_onmenu">SMART APP NODE-G02</div>
-        <div class="login"><a href="http://localhost/" class="setLogin">Login</a> </div>
-    </div>
-    <!-- =============================================================================== -->
-    <!-- CONTIANER BODY -->
-
-    <div class="contianerApp" style="display: none;">
-        
-        <div class="card">
+    <!----------------------indext play quiz and create------------------>
+    <div class="contianerApp mt-5" style="display: none;">
+        <div class="cardapp">
             <div class="card-item">
                 <img src="img/quizicon.png" alt="" class="icon-img">
-                <a href="quizses.html"><button class="btn-ToQuiz btn-hover">Play Quiz</button></a>
+                <button class="btn-ToQuiz btn-hover btnplay">Play Quiz</button>
             </div>
             <div class="card-item">
                 <img src="img/iconcreate.png" alt="" class="icon-img">
@@ -83,6 +106,33 @@
             </div> 
         </div>
     </div>
+</div>
+<!------------------------------index many quizses----------------------------->
+<div class="cotaninercards" style="display: none;">
+    <div class="cards d-flex justify-content-center align-items-center mt-5">
+        <h2 class="text-white">Topic</h2>
+    </div>
+    <div class="card-group">
+        <div class="card-body m-2">
+            <div class="card-title mt-4">
+                <h5>Present Simple</h5>
+            </div>
+            <div class="btngroup">
+                <a href="views/play/play.html" class="btn btn-primary mr-2">Play Quiz</a>
+                <a href="views/edit/edit.html"><button class="btn btn-primary ml-2">Edit Quiz</button></a>
+            </div>
+        </div>
+        <div class="card-body m-2">
+            <div class="card-title mt-4">
+                <h5>Past Perfect</h5>
+            </div>
+            <div class="btngroup">
+                <a href="views/play/play.html" class="btn btn-primary mr-2">Play Quiz</a>
+                <a href="views/edit/edit.html"><button class="btn btn-primary ml-2">Edit Quiz</button></a>
+            </div>
+        </div>
+    </div>
+
     <!-- link javascript -->
     <script src="js/mains.js"></script>
 </body>
