--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                         <div class="form-group">
-                            <button type="submit" class="btn btn-primary mt-4" value="login" id="btnlogin">Submit</button>
+                            <button type="submit" class="btn btn-primary mt-4" value="login" id="btnlogin">Login</button>
                         </div>
                     </form>
                     <form class="signup">
@@ -79,7 +79,7 @@
                         </div>
                         <div class="field">
                             <div class="input-field d-flex">
-                                <input class="pswrd" type="password" id="password" placeholder="password" required>
+                                <input class="pswrd" type="password" id="signinpassword" placeholder="password" required>
                                 <div class="show d-flex justify-content-end align-items-center">
                                     <li class="fa fa-eye mr-2"></li>
                                 </div>
@@ -113,13 +113,13 @@
         <h2 class="text-white">Topic</h2>
     </div>
     <div class="card-group">
-        <div class="card-body m-2">
+        <!-- <div class="card-body m-2">
             <div class="card-title mt-4">
                 <h5>Present Simple</h5>
             </div>
             <div class="btngroup">
                 <a href="views/play/play.html" class="btn btn-primary mr-2">Play Quiz</a>
-                <a href="views/edit/edit.html"><button class="btn btn-primary ml-2">Edit Quiz</button></a>
+                <a href="views/edit/edit.html" class="btn btn-primary ml-2">Edit Quiz</a>
             </div>
         </div>
         <div class="card-body m-2">
@@ -130,7 +130,7 @@
                 <a href="views/play/play.html" class="btn btn-primary mr-2">Play Quiz</a>
                 <a href="views/edit/edit.html"><button class="btn btn-primary ml-2">Edit Quiz</button></a>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- link javascript -->
