--- a/public/index.html
+++ b/public/index.html
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Login</title>
+    <title>Welcome to quiz app</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <!-- <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/> -->
 </head>
 <body>
     <!-- header menu -->
-    <div class="menus" style="display: none;">
-        <div class="logos d-flex justify-content-between align-items-center p-2">
-            <img src="img/logo.png" width="5%">
-            <h2>SMART APP NODE-G02</h2>
-            <div class="log"><button class="setLogin">Logout</button></div>
+    <div class="menu">
+        <div class="menuHeader">
+            <div class="appLogo"><img src="img/logo.png" width="15%"></div>
+            <div class="TitleApp">SMART APP NODE-G02</div>
+            <div class="showUserLogin">
+                <i class='fa fa-user-circle-o' style='font-size:24px'></i>
+                <span class="userLogin"></span>
+            </div>
         </div>
     </div>
     <!---------------------------form login and signin-------------------------->
-    <div class="containers">
-        <div class="wrapper" >
+    <div class="contianerFormLogin">
+        <div class="wrapper">
             <div class="title-text">
                 <div class="title login">Login</div>
                 <div class="title signup">Signup</div>
@@ -54,7 +57,8 @@
                             <div class="input-field d-flex">
                                 <input class="pswrd" type="password" id="loginpasword" placeholder="password" required>
                                 <div class="show d-flex justify-content-end align-items-center">
-                                    <li class="fa fa-eye mr-2"></li>
+                                    <li class="fa fa-eye mr-2" style="display: none;"></li>
+                                    <li class="fa fa-eye-slash mr-2"></li>
                                 </div>
                             </div>
                         </div>
@@ -81,7 +85,8 @@
                             <div class="input-field d-flex">
                                 <input class="pswrd" type="password" id="signinpassword" placeholder="password" required>
                                 <div class="show d-flex justify-content-end align-items-center">
-                                    <li class="fa fa-eye mr-2"></li>
+                                    <li class="fa fa-eye mr-2" style="display: none;"></li>
+                                    <li class="fa fa-eye-slash mr-2"></li>
                                 </div>
                             </div>
                         </div>
@@ -94,11 +99,11 @@
         </div>
     </div>
     <!----------------------indext play quiz and create------------------>
-    <div class="contianerApp mt-5" style="display: none;">
+    <div class="contianerApp mt-5">
         <div class="cardapp">
             <div class="card-item">
                 <img src="img/quizicon.png" alt="" class="icon-img">
-                <button class="btn-ToQuiz btn-hover btnplay">Play Quiz</button>
+                <button class="btn-ToQuiz btn-hover btnplay">Quizz</button>
             </div>
             <div class="card-item">
                 <img src="img/iconcreate.png" alt="" class="icon-img">
@@ -109,9 +114,7 @@
 </div>
 <!------------------------------index many quizses----------------------------->
 <div class="cotaninercards" style="display: none;">
-    <div class="cards d-flex justify-content-center align-items-center mt-5">
-        <h2 class="text-white">Topic</h2>
-    </div>
+    <div class="topicQuizz">Quizz</div>
     <div class="card-group">
         <!-- <div class="card-body m-2">
             <div class="card-title mt-4">
