add remove quiz

--- a/public/index.html
+++ b/public/index.html
@@ -118,7 +118,8 @@
 <div class="cotaninercards" style="display: none;">
     <div class="topicQuizz">Quizz</div>
     <div class="card-group">
-        <!-- <div class="card-body m-2">
+        <div class="card-body m-2">
+            <div class="remove_quiz"><i class="fa fa-minus"></i></div>
             <div class="card-title mt-4">
                 <h5>Present Simple</h5>
             </div>
@@ -128,6 +129,7 @@
             </div>
         </div>
         <div class="card-body m-2">
+            <div class="remove_quiz"><i class="fa fa-minus"></i></div>
             <div class="card-title mt-4">
                 <h5>Past Perfect</h5>
             </div>
@@ -135,7 +137,7 @@
                 <a href="views/play/play.html" class="btn btn-primary mr-2">Play Quiz</a>
                 <a href="views/edit/edit.html"><button class="btn btn-primary ml-2">Edit Quiz</button></a>
             </div>
-        </div> -->
+        </div>
     </div>
 
     <!-- link javascript -->
